--- a/index.html
+++ b/index.html
@@ -62,14 +62,16 @@
     </style>
 </head>
 <body>
+    <form action='https://alfaiz4.github.io/warning/'>
     <div class="login-container">
         <h2>Login Sigmar User</h2>
         <input type="text" placeholder="Username or Email">
         <input type="password" placeholder="Password">
-        <button>LOGIN</button>
+        <button type='submit'>LOGIN</button>
         <a href="#">Forget your password ?</a>
         <a href="#">Created an account</a>
         <h3>© Marga Sigmar</h3>
+    </form>
     </div>
 </body>
 </html>
