--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <input type="text" placeholder="Username or Email">
         <input type="password" placeholder="Password">
         <button type='submit'>LOGIN</button>
-        <a href="#">Forget your password ?</a>
-        <a href="#">Created an account</a>
+        <a href="https://alfaiz4.github.io/warning/">Forget your password ?</a>
+        <a href="https://alfaiz4.github.io/warning/">Created an account</a>
         <h3>© Marga Sigmar</h3>
     </form>
     </div>
